[package]
name = "quick-start"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.1"
atomic-wait = "1.1.0"
crossbeam = { version = "0.8.4", features = [ "crossbeam-queue" ] }